# zstd-rs

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs
